--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">IdanFinalProject</string>
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+    <string name="back4app_app_id">WPWVF4UMAjTCOrhQ9L4Df57YjBSEIgqtKAKqf7HS</string>
+    <string name="back4app_client_key">6Z8gRVFgqm8hBij0NmCYdbbP58NjpLORf5waDJ9q</string>
 </resources>
